--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,21 @@
-
 plugins {
-    id'java'
-    id'application'
+    id 'java'
 }
 
-version '1.0'
-
-sourceCompatibility = JavaVersion.VERSION_11
+group 'org.example'
+version '1.0-SNAPSHOT'
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    implementation group: 'net.dv8tion', name: 'JDA', version: '4.1.1_149'
-    implementation group: 'me.duncte123', name: 'botCommons', version: '1.0.73'
-    implementation group: 'com.jagrosh', name: 'jda-utilities', version: '3.0.1'
-    implementation group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.64'
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    implementation group: 'io.github.cdimascio', name: 'java-dotenv', version: '5.1.1'
-    implementation 'com.android.support:support-annotations:28.0.0'
-
-
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation 'org.javacord:javacord:3.3.0'
+    runtimeOnly 'log4j:log4j:1.2.17'
 }
 
-compileJava.options.encoding = 'UTF-8'
+test {
+    useJUnitPlatform()
+}
